# web3-awesome-skills

./: .gitignore  LICENSE  README.md  skill_risk_table.md
skills/community/prediction-markets/polymarket-trading-bot/: README.md  SOURCE.md  _meta.json  configure.py  install.sh  pyproject.toml  requirements.txt
skills/community/trading/openclaw-trading-suite/: README.md  SKILL.md  SOURCE.md  _meta.json  pyproject.toml
skills/community/trading/openclaw-trading-suite/configs/strategies/: swing_baseline.json
skills/community/trading/openclaw-trading-suite/plans/: agent_runtime_hardening_plan.md  live_trading_graduation_plan.md  openclaw_agent_adoption_plan.md  research-swing-indicators.md  research-swing-papers.md  research-swing-patterns.md  sentiment_ideas.md  trading_optimization.md  trading_optimization_db.md
skills/community/trading/openclaw-trading-suite/references/: adapter_plugin_contract.md  autonomy_modes.md  data_retention_schema.md  legacy_module_audit.md  public_release_scope.md  secrets_management.md  strategy_builder_and_gates.md  strategy_profiles.md  system_orchestration.md
skills/community/trading/openclaw-trading-suite/references/legacy-sources/: 4-bots-competition.md
skills/community/trading/openclaw-trading-suite/scripts/: nightly_research.py
skills/community/trading/openclaw-trading-suite/src/openclaw_trading_suite/: __init__.py  orchestration.py
skills/community/trading/openclaw-trading-suite/tests/: conftest.py  test_adapter_healing.py  test_adapter_registry.py  test_adapter_resolution.py  test_autonomy_policy.py  test_goal_alignment_and_promotion.py  test_orchestration.py  test_overnight_pipeline.py  test_security_utils.py  test_skill_discovery_and_router.py  test_sqlite_store.py  test_strategy_builder_gates.py
skills/community/trading/unifai-trading-suite/: CLAUDE.md  README.md  SKILL.md  SOURCE.md  _meta.json  pyproject.toml  requirements.txt
skills/community/trading/unifai-trading-suite/config/: __init__.py  settings.py
skills/community/trading/unifai-trading-suite/skills/polymarket-trader/: SKILL.md
skills/community/trading/unifai-trading-suite/src/: __init__.py
skills/community/trading/unifai-trading-suite/src/agents/: __init__.py  basic_agent.py  example_simple.py  trading_agent.py
skills/community/trading/unifai-trading-suite/src/api/: __init__.py  server.py
skills/community/trading/unifai-trading-suite/src/markets/: __init__.py  kalshi.py  polymarket.py
skills/community/trading/unifai-trading-suite/tests/: __init__.py  test_skills.py
(+3026 files in other folders)
