[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agent"
version = "0.1.0"
description = "AI-powered Polymarket trading agent for Clawdbot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Polymarket Agent", email = "agent@polymarket.local"}
]
keywords = ["polymarket", "trading", "ai", "clawdbot", "prediction-markets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "py-clob-client",
    "requests",
    "rich",
    "typer",
    "questionary",
    "web3",
]

[project.scripts]
poly = "cli:main"

[project.urls]
Homepage = "https://clawdhub.com/polymarket-agent"
Repository = "https://github.com/clawdhub/polymarket-agent"

[tool.setuptools]
py-modules = ["cli"]
